--- a/angularkc/package.json
+++ b/angularkc/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve -o",
     "build": "ng build",
-    "build-prod": "ng build --prod --delete-output-path false --output-path ../.",
+    "build-prod": "rimraf ../*.js && rimraf ../*.css && ng build --prod --delete-output-path false --output-path ../.",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -46,6 +46,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
+    "rimraf": "^2.6.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "~2.3.3"
